--- a/app/src/app/components/blocks/text-block/text-block.component.html
+++ b/app/src/app/components/blocks/text-block/text-block.component.html
@@ -8,3 +8,8 @@
     </div>
   </div>
 </div>
+
+<h3 *ngIf="data.title">{{data.title}}</h3>
+<div *ngIf="data.content">
+  {{data.content | text}}
+</div>
