--- a/app/src/app/components/blocks/portfolio-block/portfolio-block.component.html
+++ b/app/src/app/components/blocks/portfolio-block/portfolio-block.component.html
@@ -18,5 +18,6 @@
                 </div>
             </div>
         </div>
+        <div><img [src]="data.image" alt=""></div>
     </div>
 </section>
