--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import "scss/00-setup/theme";
+@import "scss/01-generic/generic";
+@import "scss/01-generic/global";
+@import "scss/01-generic/resets";
+@import "scss/02-components/animations";
+@import "scss/03-utilities/grid";
+@import "scss/03-utilities/utilities";
+@import "scss/breakpoints";
