--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -1,7 +1,12 @@
 <header>
-    <a *ngFor="let link of settings.links" [routerLink]="[link.link]" routerLinkActive="active">
-        {{link.title}}
-    </a>
+    <div class="header">
+        <div class="header-logo">
+            <a routerLink="/" routerLinkActive="" class="logo">Logo</a>
+        </div>
+        <div class="header-links">
+            <a *ngFor="let link of settings.links" [routerLink]="[link.link]" routerLinkActive="active" class="links">{{link.title}}</a>
+        </div>
+    </div>
 </header>
 
 <router-outlet></router-outlet>
