chore(layout)adding links to header

--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -7,12 +7,12 @@
   justify-content: space-between;
   &-links {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    width: 50%;
+    width: 70%;
   }
   &-logo {
-    width: 50%;
+    width: 30%;
     text-align: left;
   }
 }
