landing block added

--- a/app/src/app/components/blocks/landing-block/landing-block.component.html
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.html
@@ -1,1 +1,9 @@
-<p>landing-block works!</p>
+<div class="landing bg-dark">
+    <div class="grid">
+        <h1>{{data.title}}</h1>
+            <h2>{{data.subTitle}}</h2>
+    </div>
+</div>
+
+
+
