--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,1 +1,10 @@
-<p>blablablaba</p>
+<div>
+<h1>Research</h1>
+<h2>Here you can read all of our research</h2>
+</div>
+
+<section>
+
+
+
+</section>
