chore(layout)adding dev branch

--- a/app/src/app/components/blocks/landing-block/landing-block.component.html
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.html
@@ -1,9 +1,6 @@
-<div class="landing bg-dark">
-    <div class="grid">
-        <h1>{{data.title}}</h1>
-            <h2>{{data.subTitle}}</h2>
+<div class="landing">
+    <div class="landing-title">
+        <h1>Landing</h1>
+        <h4>EPIGENETICS OF PROTEIN GLYCOSYLATION BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h4>
     </div>
 </div>
-
-
-
