--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,1 +1,57 @@
-<p>blablablaba</p>
+<div>
+    <h1>RESEARCH</h1>
+    <h3>Here you can read all of our research</h3>
+</div>
+<section>
+    <h2>A Systems medicine approach to chronic inflammatory disease</h2>
+    <p>
+        A SYSCID consortium aims to develop a system medicine approach for disease prediction in chronic inflammatory
+        diseases (CID). We will focus on three major CID indications with distinct characteristics, yet a large overlap
+        of their molecular risk map: inflammatory bowel disease. systemic lupus erythematosus and rheumatoid arthritis.
+        There are 15 partners from major cohorts and initiatives in Europe joined in this project (i.e. IHEC, ICGC,
+        Twins UK and Meta-HIT) to investigate human dana sets on three major levels of resolution: whole blood
+        signatures, signatures from purified immune cell types (with focus on CD14 and CD4/CD8) and selected single cell
+        analyses. Principle data layers will comprise SNPs, methylome, transcriptome and gut microbiome. Using this set
+        up we will focus on three fundamental aims: (i) the identification of shared and unique «core disease
+        signatures, which are associated with the disease state and independent of temporal variation, (ii) the
+        generation of «predictive models of disease outcome» – builds on previous work that pathways/biomarkers for
+        disease outcome and distinct from initial disease risk may be shared across disease to guide therapy decisions
+        on an individual patient basis, (iii) «reprogramming disease» – will identify and target temporarily stable
+        epigenetic alterations in macrophages and lymphocytes in epigenome editing approaches as biological validation
+        and potential novel therapeutic tools.
+        <br>
+        <br>
+        <b>Zoldoš group</b> is involved in SYSCID project within the Workpackage WP9 (led by HUNIMED) by epigenetic
+        reprogamming to cis-regulatory regions (i.e. pathogenic variants associated to CID, previously identified by
+        partner Humanitas University, Milan, Italy) using dCas9 fusions (with activator and repressor domains, and/or
+        epigenetic reader/eraser domains). The main goal is to model the impact of the most relevant pathogenic
+        nucleotide variants on the gene expression programs of myeloid cells and CD8 cells. We will infer the possible
+        functional impact of corrective interventions selectively targeting the activity of the regulatory elements
+        harbouring such variants. Using multiple targeting and orthogonal regulation (simultaneous activation and
+        repression of genes in the same cell) will aim to enable precise pathway shaping.
+        <br>
+        <b>Type of funding scheme:</b> RIA; Coordination and support action; Support actions
+        <br>
+        <b>Work programme topics:</b> HEALTH Innovative and personalized medicine
+        <br>
+        <b>EU FP7 Call:</b> H2020-SCI1-2016-RTD
+        <br>
+        <br>
+        <b>Proposal number:</b> 733100
+        <br>
+        <br>
+        <b>Duration:</b> 60 months (1st January 2017 – 31st March 2022)
+        <br>
+        <br>
+        <b>Host institution:</b> Genos (third party Faculty of Science University of Zagreb)
+        <br>
+        <b>Coordinating person:</b> Professor Philip Rosenstiel, PhD, Christian-Albrechts-University Kiel with
+        University Hospital Schleswig Holstein, Campus Kiel
+        <br>
+        <br>
+        <b>EU Funding to Genos and Faculty of Science:</b>  880,000.00 Eur
+        <br>
+        <b>Detailed information:</b> http://syscid.eu/home/
+    </p>
+
+</section>
