--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -2,8 +2,8 @@
     <h1>RESEARCH</h1>
     <h3>Here you can read all of our research</h3>
 </div>
-<section>
-    <h2>A Systems medicine approach to chronic inflammatory disease</h2>
+<section class="research-post">
+    <h2 class="m-b-m">A Systems medicine approach to chronic inflammatory disease</h2>
     <p>
         A SYSCID consortium aims to develop a system medicine approach for disease prediction in chronic inflammatory
         diseases (CID). We will focus on three major CID indications with distinct characteristics, yet a large overlap
@@ -19,8 +19,8 @@
         on an individual patient basis, (iii) «reprogramming disease» – will identify and target temporarily stable
         epigenetic alterations in macrophages and lymphocytes in epigenome editing approaches as biological validation
         and potential novel therapeutic tools.
-        <br>
-        <br>
+    </p>
+    <p class="m-y-m">
         <b>Zoldoš group</b> is involved in SYSCID project within the Workpackage WP9 (led by HUNIMED) by epigenetic
         reprogamming to cis-regulatory regions (i.e. pathogenic variants associated to CID, previously identified by
         partner Humanitas University, Milan, Italy) using dCas9 fusions (with activator and repressor domains, and/or
@@ -29,29 +29,15 @@
         functional impact of corrective interventions selectively targeting the activity of the regulatory elements
         harbouring such variants. Using multiple targeting and orthogonal regulation (simultaneous activation and
         repression of genes in the same cell) will aim to enable precise pathway shaping.
-        <br>
-        <b>Type of funding scheme:</b> RIA; Coordination and support action; Support actions
-        <br>
-        <b>Work programme topics:</b> HEALTH Innovative and personalized medicine
-        <br>
-        <b>EU FP7 Call:</b> H2020-SCI1-2016-RTD
-        <br>
-        <br>
-        <b>Proposal number:</b> 733100
-        <br>
-        <br>
-        <b>Duration:</b> 60 months (1st January 2017 – 31st March 2022)
-        <br>
-        <br>
-        <b>Host institution:</b> Genos (third party Faculty of Science University of Zagreb)
-        <br>
-        <b>Coordinating person:</b> Professor Philip Rosenstiel, PhD, Christian-Albrechts-University Kiel with
-        University Hospital Schleswig Holstein, Campus Kiel
-        <br>
-        <br>
-        <b>EU Funding to Genos and Faculty of Science:</b>  880,000.00 Eur
-        <br>
-        <b>Detailed information:</b> http://syscid.eu/home/
     </p>
-
+    <p><b>Type of funding scheme:</b> RIA; Coordination and support action; Support actions</p>
+    <p class="m-y-s"><b>Work programme topics:</b> HEALTH Innovative and personalized medicine</p>
+    <p><b>EU FP7 Call:</b> H2020-SCI1-2016-RTD</p>
+    <p class="m-y-s"><b>Proposal number:</b> 733100</p>
+    <p><b>Duration:</b> 60 months (1st January 2017 – 31st March 2022)</p>
+    <p class="m-y-s"><b>Host institution:</b> Genos (third party Faculty of Science University of Zagreb)</p>
+    <p><b>Coordinating person:</b> Professor Philip Rosenstiel, PhD, Christian-Albrechts-University Kiel with
+        University Hospital Schleswig Holstein, Campus Kiel</p>
+    <p class="m-y-s"><b>EU Funding to Genos and Faculty of Science:</b> 880,000.00 Eur</p>
+    <p><b>Detailed information:</b> http://syscid.eu/home/</p>
 </section>
