chore(layout)adding styles for landing page

--- a/app/src/app/components/blocks/landing-block/landing-block.component.html
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.html
@@ -1,9 +1,24 @@
-<div class="landing bg-dark">
-    <div class="grid">
-        <h1>{{data.title}}</h1>
-            <h2>{{data.subTitle}}</h2>
+<div class="landing ">
+    <div class="landing-title">
+        <h1>Landing</h1>
+        <h4>EPIGENETICS OF PROTEIN GLYCOSYLATION BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h4>
     </div>
 </div>
+<section class="two-block-text m-y-l">
+    <div class="grid ai-center">
+        <div class="wrapper flex ai-start jc-around">
+        <div class="col-4">
+            <h1 class="name c-dark">Zlatka Zoldos</h1>
+            <p class="info">2000 PHD NATURAL SCIENCES, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB AND UNIVERSITY PARIS-SUD XI, CNRS, ORSAY, FRANCE (DUAL MENTORSHIP) 1992 B.SC. IN BIOLOGY, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB</p>
+        </div>
+        <div class="col-4">
+            <p class="bio m-b-m">Vlatka Zoldoš, PhD, is a professor at the University of Zagreb Faculty of Science, Department for Biology, Division of Molecular Biology, where she introduced epigenetics as a research field as well as a course at the graduate study of Molecular Biology. She mentored over 15 graduate student, as well as over 10 PhD students.</p>
+            <p class="bio m-t-m">She published over 50 scientific papers in international scientific journals with high impact factor, and is cited more than 1000 times. She is involved in several projects of large consortia funded by EU (from FP7 or Horizon2020 programs), several national projects, and her group is a part of Center of excellence in Personalized healthcare.</p>
+        </div>
+        </div>
+    </div>
+
+</section>
 
 
 
