chore()adding layout  for blocks

--- a/app/src/app/components/blocks/landing-block/landing-block.component.html
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.html
@@ -7,9 +7,9 @@
 <section class="two-block-text m-y-l">
     <div class="grid ai-center">
         <div class="wrapper flex ai-start jc-around">
-        <div class="col-4">
-            <h1 class="name c-dark">Zlatka Zoldos</h1>
-            <p class="info">2000 PHD NATURAL SCIENCES, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB AND UNIVERSITY PARIS-SUD XI, CNRS, ORSAY, FRANCE (DUAL MENTORSHIP) 1992 B.SC. IN BIOLOGY, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB</p>
+        <div class="col-5">
+            <h1 class="name c-dark">Vlatka Zoldos</h1>
+            <p class="info m-t-m">2000 PHD NATURAL SCIENCES, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB AND UNIVERSITY PARIS-SUD XI, CNRS, ORSAY, FRANCE (DUAL MENTORSHIP) 1992 B.SC. IN BIOLOGY, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB</p>
         </div>
         <div class="col-4">
             <p class="bio m-b-m">Vlatka Zoldoš, PhD, is a professor at the University of Zagreb Faculty of Science, Department for Biology, Division of Molecular Biology, where she introduced epigenetics as a research field as well as a course at the graduate study of Molecular Biology. She mentored over 15 graduate student, as well as over 10 PhD students.</p>
@@ -17,8 +17,23 @@
         </div>
         </div>
     </div>
-
 </section>
+
+<section class="m-y-xl images-block">
+    <div class="grid p-y-xl">
+        <div class="col-12 ta-center">
+            <h1>Lorem ipsum dolor sit amet</h1>
+            <h4 class="info m-t-m m-b-l">Duis aute irure dolor in reprehenderit in voluptate velit esse</h4>
+        </div>
+        <div class="col-5 ta-center">
+            <img src="assets/icons/flask.svg" alt="" class="images-block-image">
+        </div>
+        <div class="col-5 ta-center">
+            <img src="assets/icons/flask.svg" alt="" class="images-block-image">
+        </div>
+    </div>
+</section>
+
 
 
 
