chore()adding layout  for blocks

--- a/app/src/app/components/blocks/landing-block/landing-block.component.html
+++ b/app/src/app/components/blocks/landing-block/landing-block.component.html
@@ -33,7 +33,34 @@
         </div>
     </div>
 </section>
-
+<section class="research-image-block">
+    <div class="grid">
+        <div class="col-12 ta-center">
+            <h1>Lorem ipsum dolor sit amet</h1>
+            <h4 class="info m-t-m m-b-l">Duis aute irure dolor in reprehenderit in voluptate velit esse</h4>
+        </div>
+        <div class="research-image-block-wrapper">
+            <div class="research-image-block-text">
+                <h5 class="research-image-block-title">BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h5>
+                <p class="research-image-block-name m-y-s">VLATKA ZOLDOŠ</p>
+                <p class="research-image-block-content">Most integral membrane and extracellular proteins are modified by covalent addition of complex oligosaccharides (glycans), which considerably affects protein structure and function</p>
+            </div>
+            <div class="research-image-block-image br-circle">
+                <div class="research-image-block-bg"></div>
+            </div>
+        </div>
+        <div class="research-image-block-wrapper">
+            <div class="research-image-block-image br-circle">
+                <div class="research-image-block-bg"></div>
+            </div>
+            <div class="research-image-block-left">
+                <h5 class="research-image-block-title">BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h5>
+                <p class="research-image-block-name m-y-s">VLATKA ZOLDOŠ</p>
+                <p class="research-image-block-content">Most integral membrane and extracellular proteins are modified by covalent addition of complex oligosaccharides (glycans), which considerably affects protein structure and function</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
