edit: research page html

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -1,9 +1,9 @@
 <div>
-    <h1>RESEARCH</h1>
-    <h3>Here you can read all of our research</h3>
+    <h1 class="m-a-s">RESEARCH</h1>
+    <h3 class="m-a-s">Here you can read all of our research</h3>
 </div>
 <section class="research-post">
-    <h2 class="m-b-m">A Systems medicine approach to chronic inflammatory disease</h2>
+    <h2 class="m-a-l">A Systems medicine approach to chronic inflammatory disease</h2>
     <p>
         A SYSCID consortium aims to develop a system medicine approach for disease prediction in chronic inflammatory
         diseases (CID). We will focus on three major CID indications with distinct characteristics, yet a large overlap
