edit: research page html

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -3,7 +3,7 @@
     <h3 class="m-a-s">Here you can read all of our research</h3>
 </div>
 <section class="research-post">
-    <h2 class="m-a-l">A Systems medicine approach to chronic inflammatory disease</h2>
+    <h2 class="m-a-l col-12 ta-center">A Systems medicine approach to chronic inflammatory disease</h2>
     <p>
         A SYSCID consortium aims to develop a system medicine approach for disease prediction in chronic inflammatory
         diseases (CID). We will focus on three major CID indications with distinct characteristics, yet a large overlap
@@ -30,14 +30,16 @@
         harbouring such variants. Using multiple targeting and orthogonal regulation (simultaneous activation and
         repression of genes in the same cell) will aim to enable precise pathway shaping.
     </p>
-    <p><b>Type of funding scheme:</b> RIA; Coordination and support action; Support actions</p>
-    <p class="m-y-s"><b>Work programme topics:</b> HEALTH Innovative and personalized medicine</p>
-    <p><b>EU FP7 Call:</b> H2020-SCI1-2016-RTD</p>
-    <p class="m-y-s"><b>Proposal number:</b> 733100</p>
-    <p><b>Duration:</b> 60 months (1st January 2017 – 31st March 2022)</p>
-    <p class="m-y-s"><b>Host institution:</b> Genos (third party Faculty of Science University of Zagreb)</p>
-    <p><b>Coordinating person:</b> Professor Philip Rosenstiel, PhD, Christian-Albrechts-University Kiel with
-        University Hospital Schleswig Holstein, Campus Kiel</p>
-    <p class="m-y-s"><b>EU Funding to Genos and Faculty of Science:</b> 880,000.00 Eur</p>
-    <p><b>Detailed information:</b> http://syscid.eu/home/</p>
+    <div class="specifications">
+        <p><b>Type of funding scheme:</b> RIA; Coordination and support action; Support actions</p>
+        <p class="m-y-s"><b>Work programme topics:</b> HEALTH Innovative and personalized medicine</p>
+        <p><b>EU FP7 Call:</b> H2020-SCI1-2016-RTD</p>
+        <p class="m-y-s"><b>Proposal number:</b> 733100</p>
+        <p><b>Duration:</b> 60 months (1st January 2017 – 31st March 2022)</p>
+        <p class="m-y-s"><b>Host institution:</b> Genos (third party Faculty of Science University of Zagreb)</p>
+        <p><b>Coordinating person:</b> Professor Philip Rosenstiel, PhD, Christian-Albrechts-University Kiel with
+            University Hospital Schleswig Holstein, Campus Kiel</p>
+        <p class="m-y-s"><b>EU Funding to Genos and Faculty of Science:</b> 880,000.00 Eur</p>
+        <p><b>Detailed information:</b> http://syscid.eu/home/</p>
+    </div>
 </section>
