edit: research page style and content

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -4,6 +4,7 @@
 </div>
 <section class="research-post">
     <h2 class="m-a-l col-12 ta-center">A Systems medicine approach to chronic inflammatory disease</h2>
+    <img src="/assets/images/landing.png">
     <p>
         A SYSCID consortium aims to develop a system medicine approach for disease prediction in chronic inflammatory
         diseases (CID). We will focus on three major CID indications with distinct characteristics, yet a large overlap
