--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -6,6 +6,10 @@
   margin: 0 auto;
 }
 .specifications{
-  background-color: #aaaaaa;
-  align-content: center;
+  background: linear-gradient(to right, #74ebd5, #acb6e5);
+  text-align: center;
+}
+
+h1,h2,h3 {
+  font-family: helvetica;
 }
