--- a/app/src/app/components/blocks/two-block-text/two-block-text.component.html
+++ b/app/src/app/components/blocks/two-block-text/two-block-text.component.html
@@ -2,12 +2,12 @@
     <div class="grid ai-center">
         <div class="wrapper flex ai-start jc-around">
             <div class="col-5">
-                <h1 class="name c-dark fw-normal">Vlatka Zoldos</h1>
-                <p class="info m-t-m">2000 PHD NATURAL SCIENCES, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB AND UNIVERSITY PARIS-SUD XI, CNRS, ORSAY, FRANCE (DUAL MENTORSHIP) 1992 B.SC. IN BIOLOGY, FACULTY OF SCIENCE UNIVERSITY OF ZAGREB</p>
+                <h1 class="name c-dark fw-normal">{{data.name}}</h1>
+                <p class="info m-t-m">{{data.info}}</p>
             </div>
-            <div class="col-4">
-                <p class="bio m-b-m">Vlatka Zoldoš, PhD, is a professor at the University of Zagreb Faculty of Science, Department for Biology, Division of Molecular Biology, where she introduced epigenetics as a research field as well as a course at the graduate study of Molecular Biology. She mentored over 15 graduate student, as well as over 10 PhD students.</p>
-                <p class="bio m-t-m">She published over 50 scientific papers in international scientific journals with high impact factor, and is cited more than 1000 times. She is involved in several projects of large consortia funded by EU (from FP7 or Horizon2020 programs), several national projects, and her group is a part of Center of excellence in Personalized healthcare.</p>
+            <div class="col-4" *ngFor="let data of data.additional">
+                <p class="bio m-b-m">{{data.bioOne}}</p>
+                <p class="bio m-t-m">{{data.bioTwo}}</p>
             </div>
         </div>
     </div>
