chore(images-block) adding data to blocks

--- a/app/src/app/components/blocks/two-block-text/two-block-text.component.html
+++ b/app/src/app/components/blocks/two-block-text/two-block-text.component.html
@@ -5,8 +5,8 @@
                 <h1 class="name c-dark fw-normal">{{data.name}}</h1>
                 <p class="info m-t-m">{{data.info}}</p>
             </div>
-            <div class="col-4" *ngFor="let data of data.additional">
-                <p class="bio m-b-m">{{data.bioOne}}</p>
+            <div class="col-4">
+                <p class="bio m-b-m">{{data.additional.bioOne}}</p>
                 <p class="bio m-t-m">{{data.bioTwo}}</p>
             </div>
         </div>
