--- a/app/src/app/components/blocks/two-block-text/two-block-text.component.scss
+++ b/app/src/app/components/blocks/two-block-text/two-block-text.component.scss
@@ -2,6 +2,10 @@
   font-family: "Raleway", Arial, Helvetica, sans-serif;
 }
 
+.wrapper {
+  width: 80% !important;
+}
+
 .name {
   font-weight: normal!important;
 }
