chore(config.yml) adding fields for text-image block

--- a/app/src/app/components/blocks/two-block-text/two-block-text.component.html
+++ b/app/src/app/components/blocks/two-block-text/two-block-text.component.html
@@ -6,7 +6,7 @@
                 <p class="info m-t-m">{{data.info}}</p>
             </div>
             <div class="col-4">
-                <p class="bio m-b-m">{{data.additional.bioOne}}</p>
+                <p class="bio m-b-m">{{data.bio}}</p>
                 <p class="bio m-t-m">{{data.bioTwo}}</p>
             </div>
         </div>
