--- a/app/src/app/components/blocks/portfolio-block/portfolio-block.component.html
+++ b/app/src/app/components/blocks/portfolio-block/portfolio-block.component.html
@@ -1,8 +1,8 @@
 <section class="research-image-block m-y-xl">
     <div class="grid">
-        <div class="col-12 ta-center" *ngIf="data.title || data.subTitle">
+        <div class="col-12 ta-center m-y-l" *ngIf="data.title || data.subTitle">
             <h2 class="research-image-block-title" *ngIf="data.title">{{data.title}}</h2>
-            <h4 class="info" *ngIf="data.subTitle">{{data.subTitle}}</h4>
+            <p class="research-image-block-subtitle" *ngIf="data.subTitle">{{data.subTitle}}</p>
         </div>
         <div class="research-image-block-wrapper" *ngFor="let feature of data.features">
             <div class="research-image-block-text">
