--- a/app/src/app/components/blocks/portfolio-block/portfolio-block.component.scss
+++ b/app/src/app/components/blocks/portfolio-block/portfolio-block.component.scss
@@ -21,6 +21,10 @@
     font-weight: 700;
     text-transform: uppercase;
   }
+  &-subtitle {
+    font-size: 1.7em;
+    color: #aaa;
+  }
   &-name {
     text-transform: uppercase;
     font-size: 0.9em;
@@ -46,4 +50,9 @@
     border: 9px solid #868686;
     border-radius: 50%;
   }
+}
+
+
+.even {
+  flex-direction: row-reverse;
 }
