edit: research page style and content

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -2,6 +2,27 @@
     <h1 class="m-a-s">RESEARCH</h1>
     <h3 class="m-a-s">Here you can read all of our research</h3>
 </div>
+
+<section class="research-section col-5">
+    <div class="card col-4">
+        <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">
+        <div class="container col-6 m-l-xl">
+            <h2>Title</h2>
+            <h4><b>Author</b></h4>
+            <p>Lorem Ipsum doc sit</p>
+        </div>
+    </div>
+    <div class="card col-4">
+        <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">
+        <div class="container col-6 m-l-xl">
+            <h2>Title</h2>
+            <h4><b>Author</b></h4>
+            <p>Lorem Ipsum doc sit</p>
+        </div>
+    </div>
+
+</section>
+
 <section class="research-post">
     <h2 class="m-a-l col-12 ta-center">A Systems medicine approach to chronic inflammatory disease</h2>
     <img src="/assets/images/landing.png">
@@ -44,3 +65,5 @@
         <p><b>Detailed information:</b> http://syscid.eu/home/</p>
     </div>
 </section>
+
+
