--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -10,6 +10,25 @@
   text-align: center;
 }
 
-h1,h2,h3 {
+h1,h2,h3,h4,p {
   font-family: helvetica;
+}
+
+.card {
+  box-shadow: 8px 4px 8px 4px rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 16px 8px 16px 8px rgba(0,0,0,0.2);
+}
+
+.container {
+  align-content: center;
+}
+.image-cropper {
+  max-width: 100px;
+  height: auto;
+  position: relative;
+  overflow: hidden;
 }
