edit: lab members page style and content

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -66,4 +66,29 @@
     </div>
 </section>
 
+<div>
+    <h1 class="m-a-s">LAB MEMBERS</h1>
+    <h3 class="m-a-s">Meet our lab members</h3>
+</div>
 
+<div class="lab-member-card">
+    <img src="/assets/images/landing.png" alt="Vlatka Zoldoš" style="width:100%">
+    <h1>Vlatka Zoldoš</h1>
+    <p class="title">CEO & Founder</p>
+    <p>Faculty of Science University of Zagreb</p>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <p><button>Read More</button></p>
+</div>
+
+<div class="lab-member-card">
+    <img src="/assets/images/landing.png" alt="Aleksandar Vojta" style="width:100%">
+    <h1>Aleksandar Vojta</h1>
+    <p class="title">Assistant Professor</p>
+    <p>Faculty of Science University of Zagreb</p>
+    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <p><button>Read More</button></p>
+</div>
