--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -15,6 +15,7 @@ h1,h2,h3,h4,p {
 }
 
 .card {
+  align-content: center;
   box-shadow: 8px 4px 8px 4px rgba(0,0,0,0.2);
   transition: 0.3s;
 }
@@ -31,4 +32,40 @@ h1,h2,h3,h4,p {
   height: auto;
   position: relative;
   overflow: hidden;
+  align-content: center;
+}
+
+.lab-member-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
 }
