edit: lab members page style and content

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -3,8 +3,8 @@
     <h3 class="m-a-s">Here you can read all of our research</h3>
 </div>
 
-<section class="research-section col-5">
-    <div class="card col-4">
+<section class="research-section m-a-l">
+    <div class="card">
         <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">
         <div class="container col-6 m-l-xl">
             <h2>Title</h2>
@@ -12,7 +12,7 @@
             <p>Lorem Ipsum doc sit</p>
         </div>
     </div>
-    <div class="card col-4">
+    <div class="card">
         <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">
         <div class="container col-6 m-l-xl">
             <h2>Title</h2>
@@ -70,7 +70,7 @@
     <h1 class="m-a-s">LAB MEMBERS</h1>
     <h3 class="m-a-s">Meet our lab members</h3>
 </div>
-
+<section class="lab-members">
 <div class="lab-member-card">
     <img src="/assets/images/landing.png" alt="Vlatka Zoldoš" style="width:100%">
     <h1>Vlatka Zoldoš</h1>
@@ -83,7 +83,6 @@
         <button>Read More</button>
     </p>
 </div>
-
 <div class="lab-member-card">
     <img src="/assets/images/landing.png" alt="Aleksandar Vojta" style="width:100%">
     <h1>Aleksandar Vojta</h1>
@@ -96,7 +95,7 @@
         <button>Read More</button>
     </p>
 </div>
-
+</section>
 <div class="lab-member-bio m-a-l">
     <h1>Vlatka Zoldoš</h1>
     <p>Vlatka Zoldoš, PhD, is a full professor at the University of Zagreb Faculty of Science, and a principle
