edit: research page cards and info

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -3,25 +3,54 @@
     <h3 class="m-a-s">Here you can read all of our research</h3>
 </div>
 
-<section class="research-section m-a-l">
-    <div class="card">
-        <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">
-        <div class="container col-6 m-l-xl">
-            <h2>Title</h2>
-            <h4><b>Author</b></h4>
-            <p>Lorem Ipsum doc sit</p>
-        </div>
-    </div>
-    <div class="card">
-        <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">
-        <div class="container col-6 m-l-xl">
-            <h2>Title</h2>
-            <h4><b>Author</b></h4>
-            <p>Lorem Ipsum doc sit</p>
-        </div>
-    </div>
+<!--<section class="research-section m-a-l">-->
+<!--    <div class="card">-->
+<!--        <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">-->
+<!--        <div class="container col-6 m-l-xl">-->
+<!--            <h2>Title</h2>-->
+<!--            <h4><b>Author</b></h4>-->
+<!--            <p>Lorem Ipsum doc sit</p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="card">-->
+<!--        <img class="image-cropper" src="/assets/images/landing.png" alt="landing" style="width:100%">-->
+<!--        <div class="container col-6 m-l-xl">-->
+<!--            <h2>Title</h2>-->
+<!--            <h4><b>Author</b></h4>-->
+<!--            <p>Lorem Ipsum doc sit</p>-->
+<!--        </div>-->
+<!--    </div>-->
 
+<!--</section>-->
+
+
+<section class="research-image-block m-y-xl">
+    <div class="grid jc-start">
+        <div class="col-12 ta-center m-y-l">
+            <h2 class="research-image-block-title">Research 1</h2>
+            <p class="research-image-block-subtitle">Vlatka Zoldoš</p>
+        </div>
+        <div class="research-image-block-wrapper m-b-l">
+            <div class="research-image-block-text">
+                <h5 class="research-image-block-title">A Systems medicine approach to chronic inflammatory disease</h5>
+                <p class="research-image-block-name m-y-s">Zoldoš group is involved in SYSCID project within the
+                    Workpackage WP9 (led by HUNIMED) by epigenetic reprogamming to cis-regulatory regions (i.e.
+                    pathogenic variants associated to CID, previously identified by partner Humanitas University, Milan,
+                    Italy) using dCas9 fusions (with activator and repressor domains, and/or epigenetic reader/eraser
+                    domains).</p>
+                <p class="research-image-block-content">The main goal is to model the impact of the most relevant
+                    pathogenic nucleotide variants
+                    on the gene expression programs of myeloid cells and CD8 cells.</p>
+            </div>
+            <div class="research-image-block-image br-circle">
+                <div class="research-image-block-bg">
+                    <img src="assets/icons/flask.svg">
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
 
 <section class="research-post">
     <h2 class="m-a-l col-12 ta-center">A Systems medicine approach to chronic inflammatory disease</h2>
@@ -71,30 +100,30 @@
     <h3 class="m-a-s">Meet our lab members</h3>
 </div>
 <section class="lab-members">
-<div class="lab-member-card">
-    <img src="/assets/images/landing.png" alt="Vlatka Zoldoš" style="width:100%">
-    <h1>Vlatka Zoldoš</h1>
-    <p class="title">CEO & Founder</p>
-    <p>Faculty of Science University of Zagreb</p>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <p>
-        <button>Read More</button>
-    </p>
-</div>
-<div class="lab-member-card">
-    <img src="/assets/images/landing.png" alt="Aleksandar Vojta" style="width:100%">
-    <h1>Aleksandar Vojta</h1>
-    <p class="title">Assistant Professor</p>
-    <p>Faculty of Science University of Zagreb</p>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <p>
-        <button>Read More</button>
-    </p>
-</div>
+    <div class="lab-member-card">
+        <img src="/assets/images/landing.png" alt="Vlatka Zoldoš" style="width:100%">
+        <h1>Vlatka Zoldoš</h1>
+        <p class="title">CEO & Founder</p>
+        <p>Faculty of Science University of Zagreb</p>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <p>
+            <button>Read More</button>
+        </p>
+    </div>
+    <div class="lab-member-card">
+        <img src="/assets/images/landing.png" alt="Aleksandar Vojta" style="width:100%">
+        <h1>Aleksandar Vojta</h1>
+        <p class="title">Assistant Professor</p>
+        <p>Faculty of Science University of Zagreb</p>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <p>
+            <button>Read More</button>
+        </p>
+    </div>
 </section>
 <div class="lab-member-bio m-a-l">
     <h1>Vlatka Zoldoš</h1>
