--- a/app/src/app/components/blocks/test-block/test-block.component.scss
+++ b/app/src/app/components/blocks/test-block/test-block.component.scss
@@ -76,3 +76,64 @@ button:hover, a:hover {
 .research-section {
   display: flex;
 }
+
+.research-image-block {
+  &-wrapper {
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  &-text {
+    font-family: "Raleway", Arial, Helvetica, sans-serif;
+    width: 65%;
+    text-align: right;
+  }
+  &-left {
+    font-family: "Raleway", Arial, Helvetica, sans-serif;
+    width: 60%;
+    text-align: left;
+  }
+  &-title {
+    color: #484848!important;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  &-subtitle {
+    font-size: 1.7em;
+    color: #aaa;
+  }
+  &-name {
+    text-transform: uppercase;
+    font-size: 0.9em;
+    color: #aaa;
+  }
+  &-content {
+    color: #666;
+    font-size: 15px;
+  }
+  &-image {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &-bg {
+
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    border: 9px solid #868686;
+    border-radius: 50%;
+  }
+}
+
+
+.even {
+  flex-direction: row-reverse;
+  text-align: left;
+}
+
