chore(news.component) added cards and basic layout for news

--- a/app/src/app/researches/component/researches/researches.component.scss
+++ b/app/src/app/researches/component/researches/researches.component.scss
@@ -1,6 +1,6 @@
 .main {
   height: 100vh;
-  background: url("../../../../assets/images/research-main.jpg");
+  background-image: url("../../../../assets/images/research-main.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -21,7 +21,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background: url("../../../../assets/images/research.jpg");
+  background-image: url("../../../../assets/images/research.jpg");
   height: 100%;
 }
 
@@ -29,7 +29,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background: url("../../../../assets/images/research.jpg");
+  background-image: url("../../../../assets/images/research-1.jpg");
   height: 100%;
 }
 
