--- a/app/src/app/news/component/news/news.component.html
+++ b/app/src/app/news/component/news/news.component.html
@@ -1,1 +1,60 @@
-<p>news works!</p>
+<div class="main flex jc-center ai-center">
+    <div class="col-5 c-light z-index ta-center">
+        <h1>Researches</h1>
+    </div>
+</div>
+<section class="m-y-xl">
+    <div class="grid">
+        <div class="col-12 m-y-l ta-center">
+            <h1>Read about our news</h1>
+        </div>
+        <div class="col-4">
+            <div class="card br-rounded">
+                <div class="img-wrapper"></div>
+                <div class="news-info ta-left">
+                    <h5 class="news-title">BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h5>
+                    <div class="flex jc-between ai-center">
+                        <p class="news-author m-y-s">Vlatka Zoldos</p>
+                        <p class="date">Date: 20.05.2019</p>
+                    </div>
+                    <p class="news-description">Most integral membrane and extracellular proteins are modified by covalent addition of complex oligosaccharides (glycans), which considerably affects protein structure and function.</p>
+                    <div class="w-full flex jc-center m-y-m">
+                        <a href="" class="btn-secondary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card br-rounded">
+                <div class="bg-wrapper"></div>
+                <div class="news-info ta-left">
+                    <h5 class="news-title">BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h5>
+                    <div class="flex jc-between ai-center">
+                        <p class="news-author m-y-s">Vlatka Zoldos</p>
+                        <p class="date">Date: 20.05.2019</p>
+                    </div>
+                    <p class="news-description">Most integral membrane and extracellular proteins are modified by covalent addition of complex oligosaccharides (glycans), which considerably affects protein structure and function.</p>
+                    <div class="w-full flex jc-center m-y-m">
+                        <a href="" class="btn-secondary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card br-rounded">
+                <div class="img-wrapper"></div>
+                <div class="news-info ta-left">
+                    <h5 class="news-title">BIOLOGICAL IMPORTANCE OF PROTEIN GLYCOSYLATION</h5>
+                    <div class="flex jc-between ai-center">
+                        <p class="news-author m-y-s">Vlatka Zoldos</p>
+                        <p class="date">Date: 20.05.2019</p>
+                    </div>
+                    <p class="news-description">Most integral membrane and extracellular proteins are modified by covalent addition of complex oligosaccharides (glycans), which considerably affects protein structure and function.</p>
+                    <div class="w-full flex jc-center m-y-m">
+                        <a href="" class="btn-secondary">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
