edit: footer html

--- a/app/src/app/components/blocks/test-block/test-block.component.html
+++ b/app/src/app/components/blocks/test-block/test-block.component.html
@@ -27,7 +27,7 @@
 <section class="research-image-block m-y-xl">
     <div class="grid jc-start">
         <div class="col-12 ta-center m-y-l">
-            <h2 class="research-image-block-title">Research 1</h2>
+            <h2 class="research-image-block-title">A Systems medicine approach to chronic inflammatory disease</h2>
             <p class="research-image-block-subtitle">Vlatka Zoldoš</p>
         </div>
         <div class="research-image-block-wrapper m-b-l">
