--- a/app/src/app/components/layout/layout.component.scss
+++ b/app/src/app/components/layout/layout.component.scss
@@ -27,3 +27,11 @@
 .logo {
   font-size: 35px;
 }
+.logo-zoldos {
+  width: 100px;
+}
+
+.footer {
+  text-align: center;
+  background-color: #a2a2a2;
+}
