chore(publications.component) added basic layout for publications

--- a/app/src/app/publications/component/publications/publications.component.html
+++ b/app/src/app/publications/component/publications/publications.component.html
@@ -1,1 +1,19 @@
-<p>publications workasda s!</p>
+<div class="main flex jc-center ai-center">
+    <div class="col-5 c-light z-index ta-center">
+        <h1>Publications</h1>
+    </div>
+</div>
+<section class="m-y-xl">
+    <div class="grid">
+        <div class="col-12 ta-center">
+            <h2>Publications</h2>
+        </div>
+        <div class="col-12 flex fw-wrap">
+                <a href="" class="publication">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</a>
+                <a href="" class="m-y-s publication">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</a>
+                <a href="" class="publication">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</a>
+                <a href="" class="m-y-s publication">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatu</a>
+                <a href="" class="publication">Sed ut perspiciatis unde omnis iste natus </a>
+        </div>
+    </div>
+</section>
