--- a/app/src/app/components/layout/layout.component.html
+++ b/app/src/app/components/layout/layout.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header">
         <div class="header-logo">
-            <a routerLink="/" routerLinkActive="" class="logo">Logo</a>
+            <img src="assets/icons/logo.svg">
         </div>
         <div class="header-links">
             <a *ngFor="let link of settings.links" [routerLink]="[link.link]" routerLinkActive="active"
